<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">贝壳快餐</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="login_username_input_text">帐号</string>
    <string name="login_password_input_text">密码</string>
    <string name="login_username_edit_text">账户名</string>
    <string name="login_password_edit_text">密码</string>
    <string name="login_register_link">没有帐号？<a href="#" mce_href="#">注册</a></string>
    <string name="register_username_input_text">帐号</string>
    <string name="register_password_input_text">密码(6-16个字符，建议用字母加数字或符号组合)</string>
    <string name="register_username_edit_text">请输入用户名</string>
    <string name="register_password_edit_text">请输入密码</string>
    <string name="register_password_input_again_text">确认密码</string>
    <string name="register_password_edit_again_text">再次输入密码</string>
    <string name="register_email_input_text">邮箱(登陆及找回密码用，不会公开)</string>
    <string name="register_phoneNumber_edit_text">请输入手机号码</string>
    <string name="register_email_edit_text">请输入邮箱</string>
    <string name="register_phoneNumber_input_text">手机号码</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="dingwaimai">订外卖</string>
   	<string name="yijianfankui">意见反馈</string>
   	<string name="guanyu">关于</string>
   	<string name="gerenzhongxin">个人中心</string>
   	<string name="wodedingdan">我的订单</string>
   	<string name="woyaodingcan">我要订餐</string>

</resources>
