<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/background_login">
    <RelativeLayout
        android:id="@+id/register_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:padding="15dip"
        android:background="@drawable/background_login_div">
        <!-- 账号 -->
        <TextView
            android:id="@+id/register_username_input"
            android:layout_alignParentTop="true"
            android:text="@string/register_username_input_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/normalText"/>
        <EditText
            android:hint="@string/register_username_edit_text"
            android:id="@+id/register_username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_username_input"
            android:singleLine="true"
            android:inputType="text"/>
        <!-- 密码 text -->
        <TextView
            android:id="@+id/register_password_input"
            android:text="@string/register_password_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/register_username_edit"
            style="@style/normalText"/>
        <EditText
            android:hint="@string/register_password_edit_text"
            android:id="@+id/register_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_password_input"
            android:password="true"
            android:singleLine="true"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/register_password_input_again"
            android:text="@string/register_password_input_again_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/register_password_edit"
            style="@style/normalText"/>
        <EditText
            android:hint="@string/register_password_edit_again_text"
            android:id="@+id/register_password_edit_again"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_password_input_again"
            android:password="true"
            android:singleLine="true"
            android:inputType="textPassword"/>
        <!-- email -->                
        <TextView
            android:id="@+id/register_email_input"
            android:text="@string/register_email_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/register_password_edit_again"
            style="@style/normalText"/>
        <EditText
            android:hint="@string/register_email_edit_text"
            android:id="@+id/register_email_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_email_input"
            android:singleLine="true"/>
        <!-- 手机号码 -->                
        <TextView
            android:id="@+id/register_phoneNumber_input"
            android:text="@string/register_phoneNumber_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/register_email_edit"
            style="@style/normalText"/>
        <EditText
            android:hint="@string/register_phoneNumber_edit_text"
            android:id="@+id/register_phoneNumber_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_phoneNumber_input"
            android:singleLine="true"/>
        <!-- 注册button -->
        <Button
            android:id="@+id/register_button"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/register_phoneNumber_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="#00bfff"/>
    </RelativeLayout>
</LinearLayout>