<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/background_login">
    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:padding="15dip"
        android:background="@drawable/background_login_div">
        <!-- 账号 -->
        <TextView
            android:id="@+id/login_username_input"
            android:layout_alignParentTop="true"
            android:text="@string/login_username_input_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/normalText"/>
        <EditText
            android:hint="@string/login_username_edit_text"
            android:id="@+id/login_username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_username_input"
            android:singleLine="true"
            android:inputType="text"/>
        <!-- 密码 text -->
        <TextView
            android:id="@+id/login_password_input"
            android:text="@string/login_password_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/login_username_edit"
            style="@style/normalText"/>
        <EditText
            android:hint="@string/login_password_edit_text"
            android:id="@+id/login_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_input"
            android:password="true"
            android:singleLine="true"
            android:inputType="textPassword"/>
        <!-- 登录button -->
        <Button
            android:id="@+id/login_button"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#00bfff"/>
    </RelativeLayout>
    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/register_link"
        android:text="@string/login_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="#888"
        android:textColorLink="#FF0066CC" />
    </RelativeLayout>
</LinearLayout>